fixed spacing

--- a/assets/css/media-queries.css
+++ b/assets/css/media-queries.css
@@ -23,7 +23,6 @@
 	
 	.services-box .services-box-icon { width: 50px; height: 50px; font-size: 26px; line-height: 50px; border-radius: 18px; }
 
-	.about-me-box { margin-top: 80px; }
 	.about-me-box:last-child { margin-top: 50px; }
 	.about-me-box-text { padding-right: 0; text-align: center; }
 	.about-me-box-text p { text-align: left; }
@@ -58,7 +57,6 @@
 	.services-box { text-align: center; }
 	.services-box h3 { margin-top: 20px; padding-top: 10px; }
 	
-	.about-me-box { margin-top: 80px; }
 	.about-me-box:last-child { margin-top: 50px; }
 	.about-me-box-text { padding-right: 0; text-align: center; }
 	.about-me-box-text p { text-align: left; }
